<resources>
    <string name="app_name">ReelMax</string>
    <string name="no_network">Network Error, Please Check Your Connection and Try Again</string>
    <string name="reload">Reload</string>
    <string name="tab_home">Home</string>
    <string name="tab_foru">For you</string>
    <string name="tab_record">Record</string>
    <string name="tab_my">My</string>
    <string name="no_data">No Content</string>
    <string name="history_title">Watch History</string>
    <string name="more">More</string>
    <string name="collect_list">Watchlist</string>
    <string name="drama_end">Completed</string>
    <string name="drama_continue">Ongoing</string>
    <string name="cancel">Cancel</string>
    <string name="collect">Follow</string>
    <string name="collect_add">Following</string>
    <string name="collect_drama_suc">Followed Successfully</string>
    <string name="cancel_collect_drams_suc">Unfollowed Successfully</string>
    <string name="episodes">Episodes</string>
    <string name="report">Report</string>
    <string name="submit">Submit</string>
    <string name="report_options">Reason for Reporting (Required)</string>
    <string name="report_other_option">Other Issues (Up to 120 words)</string>
    <string name="report_email">E-mail (Required)</string>
    <string name="report_option1">Infringement</string>
    <string name="report_option2">Content Confusion</string>
    <string name="report_option3">Vulgarity and Pornography</string>
    <string name="report_option4">Suspected of illegal crime</string>
    <string name="report_option_empty">Please select the reason of reporting</string>
    <string name="report_email_empty">Please fill in the e-mail</string>
    <string name="report_submit_suc">Submitted</string>
    <string name="report_submit_fail">Submitting Failure</string>
    <string name="delete">Delete</string>
    <string name="delete_drama_history_suc">Delete history successfully</string>
    <string name="unlock_ad_count">Watch %1d more ads to unlock</string>
    <string name="unlock_episodes_fail">Unlocking Failure</string>
    <string name="no_reward_ad">Sorry, no incentive videos to watch, please come back later</string>
    <string name="settings_title">Settings</string>
    <string name="user_agreement">Terms</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="unlock_tip">Unlocked and cannot be viewed</string>

    <string name="sub_vip">Subscribr to VIP</string>
    <string name="vip_all_free">All Series Free</string>
    <string name="top_up">Top Up</string>
    <string name="top_up_coin">Get Virtual Coins</string>
    <string name="vip_m_title">VIP Monthly</string>
    <string name="vip_m_desc">All Series Free for 1 Month</string>
    <string name="vip_y_title">VIP Yearly</string>
    <string name="vip_y_desc">All Series Free for 1 Year</string>
    <string name="Insufficient_balance">Insufficient Balance, Please Top Up</string>
    <string name="balance">Balance</string>
    <string name="coin">Coins</string>
    <string name="my_balance">My Balance</string>
    <string name="my_sub">My Subscriptions</string>
    <string name="shop_title">Shop</string>
    <string name="vip_sub_suc">VIP Subscription Successful, You Can Now Watch All Videos for Free</string>
    <string name="buy_coin_suc">Coin Purchase Successful</string>
    <string name="buy_coin_fail">Coin Purchase Failed</string>
    <string name="my_wallet">My Wallet</string>
    <string name="top_up_record">Top-Up Record</string>
    <string name="consume_record">Consumption Record</string>
    <string name="auto_unlock">Auto Unlock Next Episode</string>
    <string name="vip_expire_at">Expires On</string>
    <string name="vip_desc">All Series Free for VIP Users</string>
    <string name="customer_service">Customer Service</string>
    <string name="vip_manage">Subscription Management</string>
    <string name="customer_email">Please Contact Customer Service via Email\n Email: reelmax@163.com</string>
    <string name="auto_unlock_on">Auto Unlock Next Episode On</string>
    <string name="auto_unlock_off">Auto Unlock Next Episode Off</string>
    <string name="dram_num">Episode %1d</string>
    <string name="unlock">Unlock</string>
    <string name="unlock_coin">Unlock This Episode Requires</string>
    <string name="unlock_no_coin">No coin to unlock this episode</string>


</resources>