<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="15dp"
    android:paddingEnd="15dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="44dp">
            <ImageView
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_back"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="@dimen/font_18"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:text="@string/report"/>

            <TextView
                android:id="@+id/submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:textColor="@color/white"
                android:textSize="@dimen/font_14"
                android:paddingStart="13dp"
                android:layout_gravity="end|center_vertical"
                android:paddingEnd="13dp"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:background="@drawable/bg_gray_btn" />
        </FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/report_options"
            android:layout_marginTop="20dp"
            android:textSize="@dimen/font_18"
            android:textColor="@color/white"
            android:textStyle="bold"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/gray_500"
            android:textSize="@dimen/font_12"
            android:text="@string/report_other_option"
            android:layout_marginTop="24dp"/>
        <EditText
            android:id="@+id/other"
            android:layout_width="match_parent"
            android:layout_height="116dp"
            android:padding="10dp"
            android:gravity="start"
            android:textSize="@dimen/font_14"
            android:textColor="@color/white"
            android:layout_marginTop="12dp"
            android:background="@drawable/bg_edittext"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/report_email"
            android:layout_marginTop="20dp"
            android:textSize="@dimen/font_18"
            android:textColor="@color/white"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:padding="10dp"
            android:textSize="@dimen/font_14"
            android:textColor="@color/white"
            android:gravity="start|center_vertical"
            android:layout_marginTop="12dp"
            android:background="@drawable/bg_edittext"/>
    </LinearLayout>
</ScrollView>