<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:minHeight="44dp">
        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_back"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="@dimen/font_18"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:text="@string/my_wallet"/>
    </FrameLayout>
    <TextView
        android:id="@+id/coin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        android:textSize="@dimen/font_46"
        tools:text="111111"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:textColor="@color/gray_500"
        android:textSize="@dimen/font_14"
        android:text="@string/coin"/>
    <TextView
        android:id="@+id/top_up"
        android:layout_width="240dp"
        android:layout_height="43dp"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/bg_red_btn"
        android:textColor="@color/white"
        android:textSize="@dimen/font_16"
        android:text="@string/top_up"/>

    <FrameLayout
        android:id="@+id/record"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:paddingStart="15dp"
        android:layout_marginTop="24dp"
        android:paddingEnd="15dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/top_up_record"
            android:textColor="@color/gray_500"
            android:layout_gravity="start|center_vertical"
            android:textSize="@dimen/font_14"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow"
            android:layout_gravity="end|center_vertical"/>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/consume"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/consume_record"
            android:textColor="@color/gray_500"
            android:layout_gravity="start|center_vertical"
            android:textSize="@dimen/font_14"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow"
            android:layout_gravity="end|center_vertical"/>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/vip"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="VIP"
            android:textColor="@color/gray_500"
            android:layout_gravity="start|center_vertical"
            android:textSize="@dimen/font_14"/>

        <TextView
            android:id="@+id/vip_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="有效期至 2018-11-28"
            android:textColor="@color/gray_900"
            android:layout_marginEnd="24dp"
            android:layout_gravity="end|center_vertical"
            android:textSize="@dimen/font_14"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow"
            android:layout_gravity="end|center_vertical"/>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/auto_unlock"
            android:textColor="@color/gray_500"
            android:layout_gravity="start|center_vertical"
            android:textSize="@dimen/font_14"/>

        <Switch
            android:id="@+id/sv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:thumbTint="@color/red"
            android:trackTint="@color/red"
            android:switchMinWidth="50dp"
            android:checked="true"
            android:splitTrack="false"
            android:layout_gravity="center_vertical|end"/>
    </FrameLayout>
</LinearLayout>