<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:minHeight="44dp">
        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_back"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="@dimen/font_18"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:text="@string/settings_title"/>
    </FrameLayout>
    <FrameLayout
        android:id="@+id/user"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:paddingStart="15dp"
        android:background="#1affffff"
        android:paddingEnd="15dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_agreement"
            android:textColor="@color/gray_500"
            android:layout_gravity="start|center_vertical"
            android:textSize="@dimen/font_14"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow"
            android:layout_gravity="end|center_vertical"/>
    </FrameLayout>
    <FrameLayout
        android:id="@+id/policy"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:paddingStart="15dp"
        android:layout_marginTop="1dp"
        android:background="#1affffff"
        android:paddingEnd="15dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/privacy_policy"
            android:textColor="@color/gray_500"
            android:layout_gravity="start|center_vertical"
            android:textSize="@dimen/font_14"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow"
            android:layout_gravity="end|center_vertical"/>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="57dp"
            android:gravity="center"
            android:layout_gravity="bottom|center_horizontal"
            android:orientation="vertical">
            <ImageView
                android:layout_width="74dp"
                android:layout_height="74dp"
                android:src="@drawable/ic_logo"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="@dimen/font_18"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/gray_500"
                android:textSize="@dimen/font_14"
                android:layout_marginTop="23dp"/>
        </LinearLayout>
    </FrameLayout>
</LinearLayout>