<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:src="@drawable/bg_my_head"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="38dp">
            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/avatar"
                android:layout_width="48dp"
                android:layout_height="48dp"
                app:shapeAppearanceOverlay="@style/CircleShapeAppearance"
                android:scaleType="centerCrop"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="10dp">
                <TextView
                    android:id="@+id/nickname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/font_15"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    tools:text="昵称"/>
                <TextView
                    android:id="@+id/user_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/font_12"
                    android:layout_marginTop="2dp"
                    android:textColor="@color/white_trans_60"
                    tools:text="ID: 987654321"/>
                <ImageView
                    android:id="@+id/vip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="invisible"
                    android:src="@drawable/ic_vip"/>
            </LinearLayout>


        </LinearLayout>
        <LinearLayout
            android:id="@+id/my_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="15dp"
            android:paddingTop="10dp"
            android:paddingEnd="15dp"
            android:paddingBottom="10dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/bg_my_info"
            android:orientation="vertical">
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white_trans_60"
                    android:textSize="@dimen/font_12"
                    android:text="@string/my_balance"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    app:tint="@color/white_trans_60"
                    android:src="@drawable/ic_arrow"/>
            </FrameLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_marginTop="15dp">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/coin"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="4dp"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_18"
                    tools:text="111111"/>
                <TextView
                    android:id="@+id/top_up"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginStart="4dp"
                    android:gravity="center"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:background="@drawable/bg_red_btn"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_13"
                    android:text="@string/top_up"/>
            </LinearLayout>
        </LinearLayout>
        <FrameLayout
            android:id="@+id/user"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:paddingStart="15dp"
            android:layout_marginTop="14dp"
            android:paddingEnd="15dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_agreement"
                android:textColor="@color/gray_500"
                android:layout_gravity="start|center_vertical"
                android:textSize="@dimen/font_14"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow"
                android:layout_gravity="end|center_vertical"/>
        </FrameLayout>
        <FrameLayout
            android:id="@+id/policy"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:paddingStart="15dp"
            android:layout_marginTop="1dp"
            android:paddingEnd="15dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/privacy_policy"
                android:textColor="@color/gray_500"
                android:layout_gravity="start|center_vertical"
                android:textSize="@dimen/font_14"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow"
                android:layout_gravity="end|center_vertical"/>
        </FrameLayout>

        <FrameLayout
            android:id="@+id/my_sub"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:paddingStart="15dp"
            android:layout_marginTop="1dp"
            android:paddingEnd="15dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_sub"
                android:textColor="@color/gray_500"
                android:layout_gravity="start|center_vertical"
                android:textSize="@dimen/font_14"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow"
                android:layout_gravity="end|center_vertical"/>
        </FrameLayout>
    </LinearLayout>
</FrameLayout>